PureFun/PureFunOof/PureFun-fe/src/test/resources/cocos/Invalid/AssignmentTypeCheck.pf
module AssignmentTypeCheck {

    x Int = 5

    fun foo() : Void {
        x = "error"
    }
}